--- a/styleAbout.css
+++ b/styleAbout.css
@@ -86,3 +86,13 @@ p {
 .email-link:hover {
   text-decoration: underline;
 }
+.img-fluid {
+  width: 100%;
+  height: 62% !important;
+}
+#contact {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  bottom: 200px;
+}
