--- a/style.css
+++ b/style.css
@@ -86,3 +86,29 @@ p {
 .email-link:hover {
   text-decoration: underline;
 }
+@media (max-width: 600px) {
+  h1 {
+    font-size: 50px;
+  }
+  h2 {
+    font-size: 30px;
+  }
+  h3 {
+    font-size: 25px;
+  }
+  .img-fluid {
+    display: none !important;
+  }
+  .col-6 {
+    width: 100%;
+  }
+  h1,
+  h2,
+  h3 {
+    text-align: center;
+  }
+  p {
+    text-align: center;
+    font-size: 15px;
+  }
+}
