--- a/styleAbout.css
+++ b/styleAbout.css
@@ -94,5 +94,14 @@ p {
   display: flex;
   position: relative;
   flex-direction: column;
-  bottom: 200px;
+  bottom: 30px;
+}
+@media (max-width: 600px) {
+  .col-sm-4 {
+    width: 100%;
+  }
+  .img-fluid {
+    width: 100%;
+    height: 100% !important;
+  }
 }
